# ai-models-wrapper

./: README.md  pyproject.toml
gpt_wrapper/: api.py  config.py  main.py
gpt_wrapper/commands/: __init__.py  list_models.py  login.py  logout.py  request.py
src/: config.py  main.py  registry.py  storage.py
src/chat/: chat.py  commands.py  config.py  models.py  view.py
src/commands/: openai.py
src/openai/: api.py  commands.py  config.py
src/storage/: storage.py  utils.py
