[tool.poetry]
name = "gpt-wrapper"
version = "0.1.0"
description = ""
authors = ["Alexander Terekhov <alxtrkhv@gmail.com>"]
readme = "README.md"
packages = [{include = "gpt_wrapper"}]

[tool.poetry.dependencies]
python = "^3.11"
openai = "^0.27.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
