[tool.poetry]
name = "ai-models-wrapper"
version = "0.4.0"
description = ""
authors = ["Alexander Terekhov <alxtrkhv@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
openai = "^0.27.4"
keyring = "^23.13.1"
typer = "^0.7.0"
rich = "^13.3.3"
shellingham = "^1.5.0.post1"
pydantic = "^1.10.7"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
aimw = "src.main:run_cli"
